(library
 (public_name nginx-http-api)
 (name nginx_http_api)
 (modules nginx nginx_t nginx_j)
 (libraries atdgen-runtime devkit lwt timedesc yojson)
 (preprocess
  (pps lwt_ppx)))

(rule
 (targets nginx_t.mli nginx_t.ml)
 (deps nginx.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets nginx_j.mli nginx_j.ml)
 (deps nginx.atd)
 (action
  (run atdgen -j -j-std -j-defaults %{deps})))
