opam-version: "2.0"
name: "nginx_http_api"
version: "1.0.0"
synopsis: "A library for nginx http api (ngx_http_api_module)"
description: """
Uses atdgen and ahrefs/devkit and allows reading (and writing if the "api write=on;" option is used) upstream statistics and settings.  Additional endpoints to be added.
"""
maintainer: "Bryce Nichols <bryce.nichols@ahrefs.com>"
authors: "Ahrefs <github@ahrefs.com>"
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
homepage: "https://github.com/brycenichols/nginx_http_api"
bug-reports: "https://github.com/brycenichols/nginx_http_api/issues"
dev-repo: "git+https://github.com/brycenichols/nginx_http_api.git"
depends: [ "ocaml"
           "dune"
           "ocamlfind"
           "atdgen"
           "atdgen-runtime"
           "devkit"
           "lwt"
           "timedesc"
           "yojson" ]
build: [
  ["dune" "build" "-p" name "-j" jobs "@install"]
]
