(library
 (name nginx_http_api)
 (modules nginx nginx_t nginx_j)
 (libraries
  atdgen-runtime
  curl
  devkit
  devkit.core
  extlib
  extunix
  lwt
  lwt.unix
  pcre
  timedesc
  yojson)
 (preprocess
  (pps lwt_ppx tyxml-ppx ppx_deriving.std ppx_fields_conv)))

(rule
 (targets nginx_t.mli nginx_t.ml)
 (deps nginx.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets nginx_j.mli nginx_j.ml)
 (deps nginx.atd)
 (action
  (run atdgen -j -j-std -j-defaults %{deps})))
